--- a/TelegramMessager/TelegramMessager.csproj
+++ b/TelegramMessager/TelegramMessager.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B618272C-5CA9-4719-AE91-BA39CEF89AB6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>TelegramMessager</RootNamespace>
     <AssemblyName>TelegramMessager</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
