Вынес все время в другой класс

--- a/TelegramMessager/TelegramMessager.csproj
+++ b/TelegramMessager/TelegramMessager.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Data.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="DataMount.cs" />
+    <Compile Include="DateTimeNow.cs" />
     <Compile Include="EnumDayOrNight.cs" />
     <Compile Include="People.cs" />
     <Compile Include="Program.cs" />
