Добавил проверку на запуск повторного приложения

--- a/TelegramMessager/App.config
+++ b/TelegramMessager/App.config
@@ -1,11 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TelegramMessager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
 		<add name="local" connectionString="Server=127.0.0.1;Database=authorization;Uid=root;Pwd=12345;" providerName="MySql.Data.MySqlClient" />
-        <add name ="server" connectionString=" database=spslogger;server=192.168.100.7;port=3306;user id=%user_2;password=20112004;characterset=utf8" />
+        <add name="server"  connectionString=" database=spslogger;server=192.168.100.7;port=3306;user id=%user_2;password=20112004;characterset=utf8" />
 		
 	</connectionStrings>
+ <userSettings>
+  <TelegramMessager.Properties.Settings>
+   <setting name="procname" serializeAs="String">
+    <value />
+   </setting>
+  </TelegramMessager.Properties.Settings>
+ </userSettings>
 </configuration>
