Добавил логи для отслеживания Врдое на этом закончил

--- a/TelegramMessager/NLog.config
+++ b/TelegramMessager/NLog.config
@@ -1,63 +1,119 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-  <!-- optional, add some variables
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
-  <variable name="myvar" value="myvalue"/>
+	<variable name="LogDirectory" value="C:\Logs\${processname}" />
+	<variable name="ConnectionString" value="Server=127.0.0.1;Database=errors;Uid=root;Pwd=12345;" />
+	<variable name="InsertCommand" value="INSERT INTO errors (Message, Date, Exception, Level) VALUES (@message, @time_stamp, @exception, @level)" />
+	
+  <targets async="true">
 
-  <!--
-  See https://github.com/nlog/nlog/wiki/Configuration-file
-  for information on customizing logging rules and outputs.
-   -->
-  <targets>
+	  <!-- Для записи в базу данных MySQL -->
+	  <target name="database" xsi:type="Database"
+			  connectionString="${var:ConnectionString}"
+			  dbProvider="MySql.Data.MySqlClient"
+			  commandText="${var:InsertCommand}">
+		  <parameter name="@message" layout="${message}" />
+		  <parameter name="@time_stamp" layout="${longdate}" />
+		  <parameter name="@exception" layout="${exception}" />
+		  <parameter name="@level" layout="${level}" />
+	  </target>
 
-    <!--
-    add your targets here
-    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
-    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
-    -->
+	  <!-- Для TRACE -->
+	  <target name="TRACE" xsi:type="BufferingWrapper" bufferSize="1">
+		  <target xsi:type="File"
+				  fileName="${LogDirectory}/${shortdate}-TRACE-logfile.txt"
+				  createDirs="true"
+				  concurrentWrites="true"
+				  deleteOldFileOnStartup="false"
+				  header="TimeStamp;LogLevel;Ip;Message"
+				  layout="${longdate};${level};${message}"
+				  archiveAboveSize="5000"
+				  maxArchiveFiles="3"
+				  archiveFileName="${LogDirectory}/archive/TRACE/${shortdate}-logfile.{#####}.txt"
+				  archiveNumbering="Sequence"
+				  keepFileOpen="false" />
+	  </target>
 
-	  <target
-		  xsi:type="File"
-		  name="infoLog"
-		  layout="${longdate} ${uppercase:${level}} ${message}"
-		  archiveEvery="Day"
-		  fileName="${logDir}/Log.info.txt"
-		  archiveFileName="${logDir}/Log.info.{#}.txt" />
-	  
-	  <!--
-	  2 Debug
-	  Данная цель сохраняет лог в файл вида logs\2024-07-23.log
-	  Вид сообщения: 2024-07-23 12:27:05.9121 DEBUG debug message
-	  -->
+	  <!-- Для DEBUG -->
+	  <target name="DEBUG" xsi:type="BufferingWrapper" bufferSize="1">
+		  <target xsi:type="File"
+				  fileName="${LogDirectory}/${shortdate}-DEBUG-logfile.txt"
+				  createDirs="true"
+				  concurrentWrites="true"
+				  deleteOldFileOnStartup="false"
+				  header="TimeStamp;LogLevel;Ip;Message"
+				  layout="${longdate};${level};${message}"
+				  archiveAboveSize="5000"
+				  maxArchiveFiles="3"
+				  archiveFileName="${LogDirectory}/archive/DEBUG/${shortdate}-logfile.{#####}.txt"
+				  archiveNumbering="Sequence"
+				  keepFileOpen="false" />
+	  </target>
 
-	  <target xsi:type="File" name="filedataDebug" fileName="${basedir}/logs/${shortdate}Debug.log"
-            layout="${longdate} ${uppercase:${level}} ${message}"/>
+	  <!-- Для INFO -->
+	  <target name="INFO" xsi:type="BufferingWrapper" bufferSize="1">
+		  <target xsi:type="File"
+				  fileName="${LogDirectory}/${shortdate}-INFO-logfile.txt"
+				  createDirs="true"
+				  concurrentWrites="true"
+				  deleteOldFileOnStartup="false"
+				  header="TimeStamp;LogLevel;Ip;Message"
+				  layout="${longdate};${level};${message}"
+				  archiveAboveSize="5000"
+				  maxArchiveFiles="3"
+				  archiveFileName="${LogDirectory}/archive/INFO/${shortdate}-logfile.{#####}.txt"
+				  archiveNumbering="Sequence"
+				  keepFileOpen="false" />
+	  </target>
+
+	  <!-- Для FATAL -->
+	  <target name="FATAL" xsi:type="BufferingWrapper" bufferSize="1">
+		  <target xsi:type="File"
+				  fileName="${LogDirectory}/${shortdate}-FATAL-logfile.txt"
+				  createDirs="true"
+				  concurrentWrites="true"
+				  deleteOldFileOnStartup="false"
+				  header="TimeStamp;LogLevel;Ip;Message"
+				  layout="${longdate};${level};${message}"
+				  archiveAboveSize="5000"
+				  maxArchiveFiles="3"
+				  archiveFileName="${LogDirectory}/archive/FATAL/${shortdate}-logfile.{#####}.txt"
+				  archiveNumbering="Sequence"
+				  keepFileOpen="false" />
+	  </target>
+
+	  <!-- Для ERROR -->
+	  <target name="ERROR" xsi:type="BufferingWrapper" bufferSize="1">
+		  <target xsi:type="File"
+				  fileName="${LogDirectory}/${shortdate}-ERROR-logfile.txt"
+				  createDirs="true"
+				  concurrentWrites="true"
+				  deleteOldFileOnStartup="false"
+				  header="TimeStamp;LogLevel;Ip;Message"
+				  layout="${longdate};${level};${message}"
+				  archiveAboveSize="5000"
+				  maxArchiveFiles="3"
+				  archiveFileName="${LogDirectory}/archive/ERROR/${shortdate}-logfile.{#####}.txt"
+				  archiveNumbering="Sequence"
+				  keepFileOpen="false" />
+	  </target>
 
   </targets>
 
   <rules>
-    <!-- add your logging rules here -->
 
-	  <!--
-	  Данное правило пишет все сообщения с минимальным уровнем Debug в целевой лог filedata
-	  -->
-
-	  <logger name="*" minlevel="Trace" writeTo="filedata" />
-
-
-	  <logger name="*" minlevel="Trace" maxlevel="Debug" writeTo="filedataDebug" />
-	  <logger name="*" minlevel="Trace" maxlevel="Debug" writeTo="infoLog" />
-	  
-    <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
+	  <!--Привила для записи в файл-->
+	  <logger name="*" level="Trace" writeTo="TRACE" />
+	  <logger name="*" level="Debug" writeTo="DEBUG" />
+	  <logger name="*" level="Info" writeTo="INFO" />
+	  <logger name="*" level="Fatal" writeTo="FATAL" />
+	  <logger name="*" level="Error" writeTo="ERROR" />
+	  <!-- Пример правила для записи логов в базу данных -->
+	  <logger name="*" level="Error" writeTo="database" />
+  
   </rules>
 </nlog>
