--- a/TelegramMessager/packages.config
+++ b/TelegramMessager/packages.config
@@ -16,10 +16,13 @@
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net472" />
+  <package id="System.Diagnostics.EventLog" version="9.0.3" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.ServiceProcess.ServiceController" version="9.0.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="Telegram.Bot" version="19.0.0" targetFramework="net472" />
   <package id="ZstdSharp.Port" version="0.8.0" targetFramework="net472" />
