--- a/TelegramMessager/App.config
+++ b/TelegramMessager/App.config
@@ -10,7 +10,7 @@
     </startup>
 	<connectionStrings>
 		<add name="local" connectionString="Server=127.0.0.1;Database=authorization;Uid=root;Pwd=12345;" providerName="MySql.Data.MySqlClient" />
-        <add name="server" connectionString=" database=spslogger;server=192.168.100.7;port=3306;user id=%user_2;password=20112004;characterset=utf8" />
+        <add name="operator" connectionString=" database=spslogger;server=192.168.100.7;port=3306;user id=%user_2;password=20112004;characterset=utf8" />
 		
 	</connectionStrings>
  <userSettings>
