--- a/TelegramMessager/TelegramMessager.csproj
+++ b/TelegramMessager/TelegramMessager.csproj
@@ -171,11 +171,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Content Include="Librari\ClassLibraryGetIp.sln" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Bat\config.ini" />
+    <None Include="Librari\ClassLibraryGetIp.csproj" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
