Изменил путь и pause добавил

--- a/TelegramMessager/Bat/config.ini
+++ b/TelegramMessager/Bat/config.ini
@@ -6,7 +6,7 @@ DisplayName=Telegram Messager Service
 ; Описание службы
 Description=Служба для оповещения людей о итогах смены
 ; Путь к exe файлу (относительно папки с bat файлами или абсолютный путь)
-ExePath=.\TelegramMessager.exe
+ExePath=..\bin\Debug\TelegramMessager.exe
 ; Тип программы (Framework или Core)
 ProgramType=Framework
 ; Учетная запись для запуска (LocalSystem, NetworkService, или специальная учетная запись)
