Изменил bat файлы

--- a/TelegramMessager/Bat/config.ini
+++ b/TelegramMessager/Bat/config.ini
@@ -24,7 +24,7 @@ RestartAttempts=-1
 
 ; Дополнительные настройки
 ; Путь к логам (относительно папки с bat файлами)
-LogPath=.\logs
+LogPath=logs
 ; Максимальный размер лога в МБ (0 для неограниченного)
 MaxLogSize=100
 ; Количество дней хранения логов (0 для хранения всех)
